2012-05-10 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-27
	* adding new message type
	* when receiving it, slave will set core dump size to 0

2012-05-02 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-26
	* moving updates from NewGUIandQueue into trunk

2012-04-30 Srecko Morovic <srecko.morovic@cern.ch>
	* V00-19-25
	* moved ShmOutputModuleRegistry to Modules

2012-04-27 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-24
	* fill ascii chart directly from deque elements,
	  it is not guaranteed to be contiguous in memory

2012-04-22 Srecko Morovic <srecko.morovic@cern.ch>

	* V00-19-22
	* updated ShmOutputModule interfaces
	* support for nExpectedEPs in I2O header

2012-04-16 Srecko Morovic <srecko.morovic@cern.ch>
	* tag V00-19-21-04
	* part of changes for FU performing fork from edm::EventProcessor
	* new interfaces to ModuleWeb components (for DaqSource) and
	ShmOutputModule

2011-10-21  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-20
	* fix crash of Vulture
	* add instance and number of processes to cpustat report 
	* bug fixes os ascii charts 

2011-08-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-19 
	* added ascii chart to cpustat
	
2011-08-31  Andrei Spataru <andrei.cristian.spataru@cern.ch>
	
	* added BUFUInterface and documentation

2011-08-17  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-18 (16 fix for missing src file by fwyzard)
	* remove circular dep with Modules

2011-06-09  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-15
	* bug fixes in MsgBuf and change MicroState interface
	
2011-05-23  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-14
	* remove bin directory from tag 

2011-05-19  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-12
	* speedup of MicroStateService
	* increase max message size in message queues
	* introduce FSTOP signal

2011-05-13  Emilio Meschi <emilio.meschi@cern.ch>
	
	* tag V00-19-11
	* changed max paths from 300 to 500 
	and max endpaths from 20 to 30
