@@ -22,6 +22,8 @@
 #define MSQM_VULTURE_TYPE_STA  0x00e
 #define MSQM_VULTURE_TYPE_STP  0x010
 #define MSQM_MESSAGE_TYPE_RLI  0x012
+#define MSQM_MESSAGE_TYPE_RLR  0x014
+#define MSQM_MESSAGE_TYPE_CRASH 0x016
 
 #define MSQS_MESSAGE_TYPE_NOP  0x000
 #define MSQS_MESSAGE_TYPE_SLA  0x200
